--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Noto', sans-serif;
+  font-family: 'Helvetica', sans-serif;
   line-height: 1;
   overflow-x: hidden;
   margin: 0;
@@ -83,12 +83,19 @@ li:first-child {
 .list-nav-elem {
   margin: 0 -.625em;
   padding: 0;
-  font-size: .875em;
   font-weight: 600;
   color: #4874ce;
   line-height: 1;
   text-transform: uppercase;
   letter-spacing: .1875em;
+}
+
+.list-nav-elem a {
+  padding: 0 .625em;
+  display: block;
+  position: relative;
+  text-decoration: none;
+  color: inherit;
 }
 
 .list-nav-elem-left {
@@ -108,7 +115,6 @@ li:first-child {
 #logo {
   height: 100%;
 }
-
 
 /* TITLE */
 
@@ -202,12 +208,33 @@ li:first-child {
 
 @media (min-width: 20em){
   .container-base {
-    max-width: 22.5em;
+    max-width: 25em;
   }
 }
 
 @media (min-width: 32.5em){
   .container-base {
-    max-width: 35em;
+    max-width: 45em;
   }
+}
+
+#main h2 {
+  margin: 0 0 .71429em;
+  padding: 0;
+  font-size: 1.875em;
+  letter-spacing: .1875em;
+  text-transform: uppercase;
+  color: #ef6998;
+  line-height: 1;
+}
+
+#main p {
+  letter-spacing: .0625em;
+  color: #1e1e1e;
+  line-height: 1.8;
+  margin: 0 0 1.42857em;
+  padding: 0;
+  font-family: 'Noto Sans', sans-serif;
+  /*font-size: .875em;*/
+  font-weight: 400;
 }
