--- a/styles.css
+++ b/styles.css
@@ -232,10 +232,26 @@ li:first-child {
   }
 }
 
+.example {
+  text-align: justify;
+  padding-top: 2em;
+}
+
+@media (min-width: 56.25em) {
+  .example-half {
+    display: inline-block;
+    width: 45%;
+  }
+
+  .example-right {
+    float: right;
+  }
+}
+
 #main h2 {
   margin: 0 0 .71429em;
   padding: 0;
-  font-size: 1.875em;
+  font-size: 1.5em;
   letter-spacing: .1875em;
   text-transform: uppercase;
   color: #7f507b;
