--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1;
   overflow-x: hidden;
   margin: 0;
@@ -19,7 +19,7 @@ body {
 
 /* HEADER */
 
-#header {
+header {
   position: fixed;
   top: 0;
   left: 0;
@@ -252,6 +252,7 @@ li:first-child {
   margin: 0 0 .71429em;
   padding: 0;
   font-size: 1.5em;
+  font-weight: 800;
   letter-spacing: .1875em;
   text-transform: uppercase;
   color: #7f507b;
@@ -266,6 +267,10 @@ li:first-child {
   padding: 0;
   font-family: 'Noto Sans', sans-serif;
   font-weight: 400;
+}
+
+#main i {
+  font-style: italic;
 }
 
 .container img {
