Small content and styling changes

--- a/styles.css
+++ b/styles.css
@@ -230,17 +230,17 @@ header.smaller .header-logo {
   padding: 3em 0 0;
 }
 
-@media (min-width: 32.5em) {
+/*@media (min-width: 32.5em) {
   .node {
-    padding: 4.5em 0 0;
+    padding: 4em 0 0;
   }
 }
 
 @media (min-width: 56.25em) {
   .node {
-    padding: 6em 0 0;
+    padding: 5em 0 0;
   }
-}
+}*/
 
 .container-element {
   margin: 0 auto;
